# task-manager-rust

./: Cargo.toml  README.md  task.txt
example/: task.json  tasks.json
files/: tasks.json
src/: board.rs  cli.rs  file.rs  lib.rs  main.rs  parser.rs  task.rs
src/cli/: cli.rs  mod.rs
src/task/: helpers.rs  mod.rs  utils.rs
src/utils/: mod.rs
