[package]
name = "task-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
prettytable = "0.10.0"
regex = "1.11.1"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"

[[bin]]
name = "task-manager"
path="./src/main.rs"


